# antelope-scraper

./: .gitignore  antelope-heroku.cabal  antelope-scraper.cabal
src/: Firebase.hs  Main.hs  Parser.hs  Scraper.hs  Sender.hs  Source.hs  Types.hs
tests/: Tests.hs  event.html  london.xml
